--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "typescript": "~4.8.0"
   },
   "resolutions:notes": {
+    "@glimmer/validator": "Newer versions of @glimmer/* are ESM-only, and Glint is compiled to CJS, so newer versions of @glimmer/* are not compatible",
     "@types/yargs": "Locking temporarily to avoid an issue with the ESM types in 17.0.14; see DT#63373",
     "@types/node": "Locking to avoid conflicts between the declared version in packages/core and floating '*' versions when we run in CI without the lockfile"
   },
   "resolutions": {
+    "@glimmer/manager": "^0.84.3",
+    "@glimmer/validator": "^0.84.3",
     "@types/yargs": "17.0.13",
     "@types/node": "^20.10.6",
     "ember-cli-htmlbars": "^6.0.1"
