Pin, don't use ^

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@types/node": "Locking to avoid conflicts between the declared version in packages/core and floating '*' versions when we run in CI without the lockfile"
   },
   "resolutions": {
-    "@glimmer/manager": "^0.84.3",
-    "@glimmer/validator": "^0.84.3",
+    "@glimmer/manager": "0.84.3",
+    "@glimmer/validator": "0.84.3",
     "@types/yargs": "17.0.13",
     "@types/node": "^20.10.6",
     "ember-cli-htmlbars": "^6.0.1"
