Add @glimmer/interfaces to pinned list

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "resolutions": {
     "@glimmer/manager": "0.84.3",
+    "@glimmer/interfaces": "0.84.3",
     "@glimmer/validator": "0.84.3",
     "@types/yargs": "17.0.13",
     "@types/node": "^20.10.6",
