--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     // Node16 allows top-level `await`, which was also unflagged in Node 14.8
     "module": "Node16",
-    "moduleResolution": "Node16",
+    "moduleResolution": "node",
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
