Fix the ability to control-click references to hop to a project's tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "references": [
-    { "path": "packages/core" },
-    { "path": "packages/environment-ember-loose" },
-    { "path": "packages/environment-ember-template-imports" },
-    { "path": "packages/environment-glimmerx" },
-    { "path": "packages/template" },
-    { "path": "packages/type-test" },
-    { "path": "packages/vscode" },
-    { "path": "packages/scripts" },
-    { "path": "test-packages/test-utils" }
+    { "path": "./packages/core" },
+    { "path": "./packages/environment-ember-loose" },
+    { "path": "./packages/environment-ember-template-imports" },
+    { "path": "./packages/environment-glimmerx" },
+    { "path": "./packages/template" },
+    { "path": "./packages/type-test" },
+    { "path": "./packages/vscode" },
+    { "path": "./packages/scripts" },
+    { "path": "./test-packages/test-utils" }
   ],
   "files": []
 }
