--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -52,6 +52,7 @@
     }
   },
   "devDependencies": {
+    "@types/node": "^18.11.5",
     "@types/ember": "^4.0.0",
     "@types/ember__component": "^4.0.10",
     "@types/ember__helper": "^4.0.1",
